tests/codegen/fail/dynamic_task_array_index_assignment_after_consume_build.stderr
error: tests/codegen/fail/dynamic_task_array_index_assignment_after_consume_build.ql:13:12: local `tasks` may have been moved on another control-flow path
      return await tasks[0]
             ^^^^^^^^ use here
      let first = await tasks[0]
                  ^^^^^^^^ consumed here by `await`
  note: this local is only known to be moved on some incoming paths in the current checker